--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ install:
   - pip install requests
 # command to run tests
 script:
-   - python -m unittest hw04test
+   - python -m unittest mock_hw04test
